--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+  <header>
     <meta charset="utf-8">
     <title>Airlines!!</title>
     <link rel="stylesheet" href="./style.css">
-  </head>
+    <h1> Puerto Rico Airlines </h1>
+    <nav>
+        <button>HOME</button>
+        <button>FLIGHTS</button>
+        <button>SUPPORT</button>
+        <button>LOGIN</button>
+    </nav>
+  </header>
+
+
+  <main>
   <body>
+    <div class="card flights">
+      <h2>Flights</h2>
+      <p>Come Check Out Our Sweet Flights</p>
+      <p>Direct Flights Available Daily</p>
+      <button class = "cardButton">Lets go</button>
+    </div>
+
+    <div class="card group">
+        <h2>Group Trips</h2>
+        <p>We offer great groups rates. For
+        families with 4 members to gatherings of 50+!</p>
+      <button class = "cardButton">Group Rates</button>
+    </div>
+
+    <div class="card discount">
+        <h2>Discount Flights</h2>
+        <p>Discount Flight available for individuals!
+        Single chair filler tickets for low rates!</p>
+      <button lcass = "cardButton">Jump in</button>
+    </div>
+    <br>
+    <br>
+    <br>
+
+    <div class="card about">
+        <h2>About us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Phasellus ut risus et arcu facilisis ullamcorper. Donec nunc risus,
+          finibus in mollis et, vehicula vitae mauris. Sed non rutrum mauris.
+          Phasellus pulvinar enim sed sem auctor condimentum vitae sed eros.
+          Sed tincidunt dui a lacus tempor vehicula. Pellentesque habitant morbi tristique.</p>
+      <button class = "cardButton">Learn More</button>
+    </div>
+
+
 
   </body>
+</main>
 </html>
