--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Discount Flights</h2>
         <p>Discount Flight available for individuals!
         Single chair filler tickets for low rates!</p>
-      <button lcass = "cardButton">Jump in</button>
+      <button class = "cardButton">Jump in</button>
     </div>
     <br>
     <br>
